--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Multitask Classifiers: From Objects to Emotions</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -12,6 +13,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         .container {
@@ -21,21 +23,38 @@
             padding: 20px;
             background: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         h1 {
             color: #333;
             border-bottom: 2px solid #3498db;
             padding-bottom: 10px;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            text-align: center;
+            background: linear-gradient(to right, #3498db, #2980b9);
+            color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: background 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        h1:hover {
+            background: linear-gradient(to right, #2980b9, #3498db);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
 
         h2, h3, h4 {
             color: #333;
+            transition: color 0.3s ease;
         }
 
         p {
             color: #555;
             line-height: 1.8;
+            transition: color 0.3s ease;
         }
 
         a {
@@ -53,6 +72,7 @@
             border: 1px solid #ddd;
             overflow-x: auto;
             margin-bottom: 20px;
+            transition: background-color 0.3s ease, border-color 0.3s ease;
         }
 
         img {
@@ -92,6 +112,7 @@
             background: #f4f4f4;
             padding: 2px 4px;
             border-radius: 4px;
+            transition: background-color 0.3s ease;
         }
 
         .section {
@@ -135,10 +156,103 @@
         #table-of-contents ul li:hover a {
             color: #2980b9;
         }
+
+        body.dark-mode {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+
+        body.dark-mode .container {
+            background-color: #1e1e1e;
+            color: #e0e0e0;
+        }
+
+        body.dark-mode h1 {
+            background: linear-gradient(to right, #4a4a4a, #2e2e2e);
+            color: white;
+        }
+
+        body.dark-mode h2,
+        body.dark-mode h3,
+        body.dark-mode h4 {
+            color: #e0e0e0;
+        }
+
+        body.dark-mode p {
+            color: #b0b0b0;
+        }
+
+        body.dark-mode a {
+            color: #82b1ff;
+        }
+
+        body.dark-mode a:hover {
+            color: #3399ff;
+        }
+
+        body.dark-mode pre {
+            background-color: #2e2e2e;
+            border-color: #555;
+        }
+
+        body.dark-mode code {
+            background-color: #2e2e2e;
+        }
+
+        body.dark-mode .highlight {
+            background-color: #333;
+            border-left-color: #82b1ff;
+        }
+
+        .toggle-container {
+            position: fixed;
+            top: 50%;
+            left: 10px;
+            transform: translateY(-50%);
+        }
+
+        .toggle-button {
+            background: #3498db;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            padding: 10px;
+            border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .toggle-button i {
+            font-size: 24px;
+            color: white;
+            transition: transform 0.3s ease;
+        }
+
+        .toggle-button:hover {
+            background: #2980b9;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        }
+
+        .toggle-button:hover i {
+            transform: rotate(45deg);
+        }
+
+        body.dark-mode .toggle-button {
+            background: #82b1ff;
+        }
+
+        body.dark-mode .toggle-button:hover {
+            background: #3399ff;
+        }
     </style>
 </head>
 
 <body>
+    <div class="toggle-container">
+        <button id="toggle-dark-mode" class="toggle-button" aria-label="Toggle Dark Mode">
+            <i class="fas fa-moon"></i>
+        </button>
+    </div>
     <div class="container">
         <h1>AI Multitask Classifiers: From Objects to Emotions</h1>
         <p>Created by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024, this repository contains Python scripts for various AI-powered classifiers. These classifiers can be used for object detection, face detection, character recognition, and more. The classifiers are built using popular deep learning frameworks such as <code>OpenCV</code>, <code>TensorFlow</code>, and <code>PyTorch</code>.</p>
@@ -147,7 +261,7 @@
 
         <p>What's even more interesting is that all these classifiers can use your webcam for live testing, video files, or image files!</p>
 
-        <p>Please read this README file carefully to understand how to use each classifier and how to run the main script to choose and run any of the classifiers. Happy classifying! 🚀</p>
+        <p>Please read this webpage carefully to understand how to use each classifier and how to run the main script to choose and run any of the classifiers. Happy classifying! 🚀</p>
         <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem;"></div>
 
         <h2>Table of Contents</h2>
@@ -646,5 +760,15 @@ git lfs pull</code></pre>
         <p>Created with ❤️ by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024.</p>
     </div>
 </body>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+    const toggleButton = document.getElementById('toggle-dark-mode');
+
+    toggleButton.addEventListener('click', function () {
+            document.body.classList.toggle('dark-mode');
+        });
+    });
+</script>
 
 </html>
