Fix: Added self-trained model

--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Multitask Classifiers: From Objects to Emotions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://hoangsonww.github.io/AI-ML-Classifiers/assets/favicon.ico" type="image/x-icon">
+
+    <meta name="description" content="Explore AI Multitask Classifiers to discover and learn about object detection, face detection, mood classification, and more.">
+    <meta property="og:title" content="AI Multitask Classifiers: From Objects to Emotions" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta http-equiv="content-language" content="en" />
+    <meta property="og:description" content="Explore AI Multitask Classifiers to discover and learn about object detection, face detection, mood classification, and more." />
+    <meta property="og:url" content="https://hoangsonww.github.io/AI-ML-Classifiers/" />
+    <meta property="og:site_name" content="AI & ML Classifiers" />
+    <meta property="og:image" content="https://hoangsonww.github.io/AI-ML-Classifiers/assets/image.webp"/>
+    <meta property="og:image:alt" content="AI Multitask Classifiers" />
+    <meta name="keywords" content="artificial intelligence, machine learning, classifiers, AI, ML, regression, data science" />
+    <meta name="author" content="Son Nguyen Hoang">
+    <link rel="canonical" href="https://hoangsonww.github.io/AI-ML-Classifiers/"/>
+    <meta name="robots" content="index, follow">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="3 days">
+    <meta name="distribution" content="global">
+    <meta name="language" content="en">
+    <meta name="theme-color" content="#3498db">
+    <meta name="referrer" content="no-referrer-when-downgrade">
+
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
