Fix: Added self-trained model

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta name="language" content="en">
     <meta name="theme-color" content="#3498db">
     <meta name="referrer" content="no-referrer-when-downgrade">
+    <link rel="manifest" href="manifest.json">
 
     <style>
         body {
