Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
         </ul>
         <p>And if you would like to use the website version of this app, you will also need to install Flask and Flask-SocketIO.</p>
         <p>It is also <strong>recommended</strong> to use a virtual environment to use these classifiers. You can create a virtual environment using <code>venv</code> or <code>conda</code>:</p>
-        <pre><code>python -m venv env
-            source env/bin/activate</code></pre>
+        <pre><code>
+            python -m venv env
+            source env/bin/activate
+        </code></pre>
         <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem;"></div>
 
         <h2 id="main-script">Main Script</h2>
@@ -149,8 +151,10 @@
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Vehicle-Classification</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Vehicle-Classification
+                </code></pre>
             </li>
             <li>
                 <p><strong>Download Model Weights</strong></p>
@@ -163,8 +167,10 @@ cd AI-Classification/Vehicle-Classification</code></pre>
             <li>
                 <p><strong>Install and Pull Git LFS</strong></p>
                 <p>Install Git LFS by following the instructions on the <a href="https://git-lfs.github.com/">official Git LFS website</a>. Then, pull the model weights using Git LFS.</p>
-                <pre><code>git lfs install
-git lfs pull</code></pre>
+                <pre><code>
+                    git lfs install
+                    git lfs pull
+                </code></pre>
                 <p>Alternatively, you can download the weights file from the <a href="https://pjreddie.com/darknet/yolo/">official YOLO website</a> and place it in the <code>Vehicle-Classification</code> directory. However, using Git LFS is recommended.</p>
             </li>
             <li>
@@ -200,8 +206,10 @@ git lfs pull</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Face-Classification</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Face-Classification
+                </code></pre>
             </li>
             <li>
                 <p><strong>Download Model Weights</strong></p>
@@ -238,8 +246,10 @@ cd AI-Classification/Face-Classification</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Mood-Classification</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Mood-Classification
+                    </code></pre>
             </li>
             <li>
                 <p><strong>Install Dependencies</strong></p>
@@ -275,8 +285,10 @@ cd AI-Classification/Mood-Classification</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Character-Recognition</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Character-Recognition
+                </code></pre>
             </li>
             <li>
                 <p><strong>Install the required Python dependencies.</strong></p>
@@ -325,8 +337,10 @@ cd AI-Classification/Character-Recognition</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Flowers-Classification</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Flowers-Classification
+                </code></pre>
             </li>
             <li>
                 <p><strong>Install Dependencies</strong></p>
@@ -361,8 +375,10 @@ cd AI-Classification/Flowers-Classification</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Object-Classification</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Object-Classification
+                </code></pre>
             </li>
             <li>
                 <p><strong>Install Dependencies</strong></p>
@@ -396,8 +412,10 @@ cd AI-Classification/Object-Classification</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Animals-Classification</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Animals-Classification
+                </code></pre>
             </li>
             <li>
                 <p><strong>Install Dependencies</strong></p>
@@ -430,8 +448,10 @@ cd AI-Classification/Animals-Classification</code></pre>
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Speech-Recognition</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Speech-Recognition
+                </code></pre>
             </li>
             <li>
                 <p><strong>Install Dependencies</strong></p>
