Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -492,8 +492,10 @@
         <ol>
             <li>
                 <p><strong>Clone the Repository</strong></p>
-                <pre><code>git clone https://github.com/hoangsonww/AI-Classification.git
-cd AI-Classification/Sentiment-Analysis</code></pre>
+                <pre><code>
+                    git clone https://github.com/hoangsonww/AI-Classification.git
+                    cd AI-Classification/Sentiment-Analysis
+                </code></pre>
             </li>
             <li>
                 <p><strong>Install Dependencies</strong></p>
@@ -502,8 +504,10 @@ cd AI-Classification/Sentiment-Analysis</code></pre>
             <li>
                 <p><strong>Pull the Large Training Data</strong></p>
                 <p>The sentiment classifier is trained on a large dataset of tweets. The large training data is stored in a CSV file named <code>training.1600000.processed.noemoticon.csv</code>. This file is stored using Git LFS due to its large size. To pull the large training data, use the following command:</p>
-                <pre><code>git lfs install
-git lfs pull</code></pre>
+                <pre><code>
+                    git lfs install
+                    git lfs pull
+                </code></pre>
                 <p>Alternatively, you can download the large training data from the <a href="http://help.sentiment140.com/for-students">Sentiment140 dataset</a> website and place it in the <code>Sentiment-Classifier</code> directory. However, using Git LFS is <strong>recommended.</strong></p>
                 <p>If you do not have Git LFS installed, remember to install it first. You can find instructions on how to install Git LFS on the <a href="https://git-lfs.github.com/">official Git LFS website</a>.</p>
             </li>
@@ -625,5 +629,4 @@ git lfs pull</code></pre>
         });
     });
 </script>
-
 </html>
