Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -41,9 +41,21 @@
         <h1>AI Multitask Classifiers: From Objects to Emotions</h1>
         <p>Created by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024, this repository contains Python scripts for various AI-powered classifiers. These classifiers can be used for object detection, face detection, character recognition, and more. The classifiers are built using popular deep learning frameworks such as <code>OpenCV</code>, <code>TensorFlow</code>, and <code>PyTorch</code>.</p>
 
-        <p>This repository contains <strong>8</strong> subdirectories: one for vehicle classification, one for human face classification, one for mood classification, one for flower classification, one for object classification, one for character classification, one for animal classification, and one for speech recognition, namely <code>Vehicle-Classification</code>, <code>Human-Face-Classification</code>, <code>Mood-Classification</code>, <code>Flowers-Classification</code>, <code>Object-Classification</code>, <code>Character-Recognition</code>, <code>Animals-Classification</code>, and <code>Speech-Recognition</code>. Refer to the information below for details on each classifier.</p>
+        <p>This repository contains <strong>9</strong> primary subdirectories for various classifiers:</p>
+        <ul>
+          <li><code>Vehicle-Classification</code></li>
+          <li><code>Human-Face-Classification</code></li>
+          <li><code>Mood-Classification</code></li>
+          <li><code>Flowers-Classification</code></li>
+          <li><code>Object-Classification</code></li>
+          <li><code>Character-Recognition</code></li>
+          <li><code>Animals-Classification</code></li>
+          <li><code>Speech-Recognition</code></li>
+            <li><code>Special-Self-Trained-Sentiment-Classifier</code></li>
+        </ul>
+        <p>Refer to the information below for details on each classifier.</p>
 
-        <p>What's even more interesting is that all these classifiers can use your webcam for live testing, video files, or image files!</p>
+        <p>What's even more interesting is that all these classifiers can use your <strong>webcam</strong> for live testing, <strong>video</strong> files, or <strong>image</strong> files!</p>
 
         <p>Please read this webpage carefully to understand how to use each classifier and how to run the main script to choose and run any of the classifiers. Happy classifying! 🚀</p>
         <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem;"></div>
