Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="index.js" defer></script>
   </head>
 
   <body>
@@ -751,48 +752,4 @@
       <p>Created with ❤️ by <a href="https://github.com/hoangsonww">Son Nguyen</a> in 2024.</p>
     </div>
   </body>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const toggleButton = document.getElementById('toggle-dark-mode');
-      const scrollToTopButton = document.getElementById('scroll-to-top');
-
-      if (localStorage.getItem('dark-mode') === 'enabled') {
-        document.body.classList.add('dark-mode');
-      }
-
-      toggleButton.addEventListener('click', function () {
-        document.body.classList.toggle('dark-mode');
-        if (document.body.classList.contains('dark-mode')) {
-          localStorage.setItem('dark-mode', 'enabled');
-        } else {
-          localStorage.removeItem('dark-mode');
-        }
-      });
-
-      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-          e.preventDefault();
-          document.querySelector(this.getAttribute('href')).scrollIntoView({
-            behavior: 'smooth',
-          });
-        });
-      });
-
-      window.addEventListener('scroll', () => {
-        if (window.pageYOffset > 300) {
-          scrollToTopButton.style.display = 'block';
-        } else {
-          scrollToTopButton.style.display = 'none';
-        }
-      });
-
-      scrollToTopButton.addEventListener('click', () => {
-        window.scrollTo({
-          top: 0,
-          behavior: 'smooth',
-        });
-      });
-    });
-  </script>
 </html>
