--- a/app.html
+++ b/app.html
@@ -79,6 +79,7 @@
       </div>
     </div>
 
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
       $(document).ready(function () {
