Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
             Alternatively, you can download the weights file from the <a href="https://pjreddie.com/darknet/yolo/">official YOLO website</a> and place it in the
             <code>Vehicle-Classification</code> directory. However, using Git LFS is recommended.
           </p>
+          <p>
+            If you still encounter issues with Git LFS, you can download the weights file from my Google Drive <a href="https://drive.google.com/file/d/13Tf2j9blTPUnITUuUtvWNFxUImSz1TKe/view?usp=sharing">here</a>.
+          </p>
         </li>
         <li>
           <p><strong>Run Vehicle Detection</strong></p>
@@ -639,6 +642,10 @@
           <p>
             If you do not have Git LFS installed, remember to install it first. You can find instructions on how to install Git LFS on the
             <a href="https://git-lfs.github.com/">official Git LFS website</a>.
+          </p>
+          <p>
+            If you still encounter issues with Git LFS, you can download the training data file from my Google Drive <a href="https://drive.google.com/file/d/1VHdnu9pNPIp2Gu6y0mOW5GB4azaEPu8I/view?usp=sharing">here</a>.
+            If you need any other files, feel free to <a href="mailto:hoangson091104@gmail.com">contact me</a>!
           </p>
         </li>
         <li>
