Update: Refactored Source Code

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <meta name="theme-color" content="#3498db" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="assets/js/index.js" defer></script>
   </head>
 
   <body>
