--- a/information-website/index.html
+++ b/information-website/index.html
@@ -697,11 +697,11 @@
       </p>
       <p><strong>Training Output Example:</strong></p>
       <p class="center">
-        <img src="Sentiment-Analysis/sentiment-train.png" alt="Sentiment Classifier Training Output" />
+        <img src="../Sentiment-Analysis/sentiment-train.png" alt="Sentiment Classifier Training Output" />
       </p>
       <p><strong>Classification Output Example:</strong></p>
       <p class="center">
-        <img src="Sentiment-Analysis/sentiment-classi.png" alt="Sentiment Classifier Classification Output" />
+        <img src="../Sentiment-Analysis/sentiment-classi.png" alt="Sentiment Classifier Classification Output" />
       </p>
       <p>Feel free to experiment with the sentiment classifier and test it with your own sentences and explore how powerful sentiment analysis can be!</p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
@@ -743,7 +743,7 @@
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="license">License</h2>
-      <p>This project is licensed under the MIT License - see the <a href="LICENSE">LICENSE</a> file for details.</p>
+      <p>This project is licensed under the MIT License - see the <a href="https://github.com/hoangsonww/AI-ML-Classifiers/blob/master/LICENSE">LICENSE</a> file for details.</p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
       <h2 id="live-info-website">Live Info Website</h2>
