Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -584,7 +584,7 @@
         the window.
       </p>
       <p class="center">
-        <img src="Speech-Recognition/speech-classi.png" alt="Speech Recognition Output" />
+        <img src="../Speech-Recognition/speech-classi.png" alt="Speech Recognition Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
