Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -542,7 +542,7 @@
       <h3 id="output-6">Output</h3>
       <p>The output will display the class labels of the animals detected in the image along with the confidence scores.</p>
       <p class="center">
-        <img src="Animals-Classification/animal-classi.png" alt="Animal Classification Output" />
+        <img src="../Animals-Classification/animal-classi.png" alt="Animal Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
