Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -502,7 +502,7 @@
         displaying the detected objects along with their class labels.
       </p>
       <p class="center">
-        <img src="Object-Classification/object-classi.png" alt="Object Classification Output" />
+        <img src="../Object-Classification/object-classi.png" alt="Object Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
