Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -456,7 +456,7 @@
       <h3 id="output-3">Output</h3>
       <p>The output will display the class label of the flower detected in the image along with the confidence score.</p>
       <p class="center">
-        <img src="Flowers-Classification/flower-classi.png" alt="Flower Classification Output" />
+        <img src="../Flowers-Classification/flower-classi.png" alt="Flower Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
