Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -416,7 +416,7 @@
       <h3 id="output-5">Output</h3>
       <p>The output will display the class labels of the characters detected in the image along with the confidence scores.</p>
       <p class="center">
-        <img src="Character-Recognition/character-classi.png" alt="Character Classification Output" />
+        <img src="../Character-Recognition/character-classi.png" alt="Character Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
