Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -352,7 +352,7 @@
       <h3 id="output-2">Output</h3>
       <p>The output will display the detected mood in the image, video, or webcam stream and in the console.</p>
       <p class="center">
-        <img src="Mood-Classification/mood-classi.png" alt="Mood Classification Output" />
+        <img src="../Mood-Classification/mood-classi.png" alt="Mood Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
