Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -311,7 +311,7 @@
       <h3 id="output-1">Output</h3>
       <p>The output will be a video displaying the detected faces along with their estimated age and gender.</p>
       <p class="center">
-        <img src="Human-Face-Classification/face-classi.png" alt="Face Classification Output" />
+        <img src="../Human-Face-Classification/face-classi.png" alt="Face Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
