Update: Refactored Source Code

--- a/information-website/index.html
+++ b/information-website/index.html
@@ -259,7 +259,7 @@
         various classes such as car, truck, bus, motorcycle, and bicycle.
       </p>
       <p class="center">
-        <img src="Vehicle-Classification/vehicle-classi.png" alt="Vehicle Classification Output" />
+        <img src="../Vehicle-Classification/vehicle-classi.png" alt="Vehicle Classification Output" />
       </p>
       <div style="border-top: 1px solid #ccc; margin-top: 2rem; padding-top: 1rem"></div>
 
